# transactor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml  publish.yml
examples/: simple_stdin.rs  tokio_tcp.rs
src/: cli.rs  errors.rs  lib.rs  main.rs  types.rs
src/accounts/: mod.rs  tests.rs
src/engine/: mod.rs  tests.rs
src/movements/: mod.rs  test.rs
src/transactions/: mod.rs  tests.rs
