[package]
name = "transactor"
version = "0.1.0"
edition = "2024"
authors = ["Adan SdPC <adan@witnet.foundation>"]
repository = "aesedepece/transactor"
readme = "README.md"
license-file = "LICENSE"
keywords = ["transaction", "deposit", "withdrawal", "account", "balance"]
description = "A toy (yet intentionally robust) transaction processing engine and accounting system with support for deposits, withdrawals, disputes, resolutions and chargebacks."

[dependencies]
# Gives us fixed precision floats, which are strictly needed to guarantee 4-digit decimal precision.
fixed = "1.30.0"
# Clever solution to having a transaction history where you can query by key and get the whole list of entries in the
# original order of insertion, both with O(1) complexity.
indexmap = "2.13.0"
# The gold standard for error handling and formatting these days, better in every way than the old `failure`.
thiserror = "2.0.18"
